# tiny_os

./: .dockerignore  .env  .gitignore  .rust-analyzer.toml  CI_CD_SETUP.md  CLAUDE.md  CODE_ISSUES_ANALYSIS.md  CODE_QUALITY_PROGRESS.md  COMPREHENSIVE_TEST_SUITE.md  CURRENT_STATUS_SUMMARY.md  Cargo.toml  Cargo.toml.workspace  Cargo.workspace.toml  DEVELOPMENT_ROADMAP.md  DOCKER_DEV_ENVIRONMENT_PLAN.md  DOCKER_FIXES_SUMMARY.md  DOCKER_FOUNDATION_SUMMARY.md  DOCKER_GUIDE.md  DOCKER_IMPLEMENTATION_ROADMAP.md  DOCS.md  DOCUMENTATION_UPDATE_COMPLETE.md  Dockerfile  EXCEPTION_ENHANCEMENT_PLAN.md  EXCEPTION_IMPLEMENTATION.md  FAT32_COMPLETION_SUMMARY.md  FAT32_STATUS.md  FOCUSED_EFFICIENCY_ROADMAP.md  LICENSE.md  MEMORY_TESTING.md  MEMORY_TESTING_GUIDE.md  Makefile  PHASE1_NOSTD_ANALYSIS.md  PHASE4_3_IMPLEMENTATION_PLAN.md  PHASE4_4_1_COW_COMPLETION_SUMMARY.md  PHASE_1_COMPLETION_REPORT.md  PI_4-5_STRATEGIC_FOCUS.md  PROJECT_BASELINE_STATUS.md  PROJECT_STATUS.md  README.md  README_NEW.md  (+56 more)
.cargo/: config  config.toml
archived_docs/: CLEANUP_SUMMARY.md  CONSOLIDATION_SUMMARY.md  DOCUMENTATION_CLEANUP.md  FINAL_CLEANUP_SUMMARY.md  INTERRUPT_MANAGEMENT.md  MEMORY_MANAGEMENT.md  README_OLD.md  TESTING.md  TESTING_FIX.md  TEST_SUITE_ORGANIZATION.md
archived_tests/: run_tests.sh  test_enhanced_memory.sh  test_interactive.sh  test_interrupts.sh  test_interrupts_automated.sh  test_interrupts_simple.sh  test_memory.sh  test_memory_automated.sh  test_memory_comprehensive.sh  test_memory_simple.sh
docs/: AI_ASSISTANT_CONTEXT.md  ARCHITECTURE_DECISIONS.md  BASELINE_ASSESSMENT.md  CI_CD_INTEGRATION_SUMMARY.md  CI_CD_RELEASE_SUMMARY.md  CI_CD_SETUP.md  COMPONENT_RELATIONSHIPS.md  DOCKER_PERMISSIONS_FIX_SUMMARY.md  DOCUMENTATION_CLEANUP_SUMMARY.md  PHASE1_COMPLETE_REVIEW.md  PHASE1_IMPLEMENTATION.md  PHASE1_PROGRESS_REPORT.md  PHASE2_IMPLEMENTATION_PLAN.md  PROJECT_BASELINE.md  PROJECT_BASELINE_CONTEXT.md  README.md  TESTING_INFRASTRUCTURE.md
scripts/: create_sd_image.sh  phase3_summary.sh  verify_rust_analyzer_fix.sh  version.sh
src/: boot.s  exception_vectors.s  exceptions.rs  fat32.rs  gdt.rs  gpio.rs  interrupts.rs  lib.rs  main.rs  main_clean.rs  main_full.rs  main_minimal.rs  memory.rs  sdcard.rs  serial.rs  shell_tests.rs  simple_tests.rs  stack_asm.s  timer.rs  uart.rs  vga_buffer.rs
temp/: FAT32_INTEGRATION_COMPLETE.md  FAT32_ISSUE_RESOLUTION.md  fat32_backup.rs  main_with_fat32.rs  readme.txt  run_interactive.sh
tests/: basic_boot.rs  quick_test.sh  shell_integration_tests.rs  shell_tests.rs  should_panic.rs  stack_overflow.rs  test_advanced_protection.sh  test_comprehensive_integration.sh  (+14 more)
(+322 files in other folders)
