[package]
name = "tiny_os"
version = "0.2.0"
edition = "2021"
authors = ["TinyOS Contributors"]
description = "A bare-metal operating system for Raspberry Pi 4/5"
keywords = ["embedded", "bare-metal", "os", "raspberry-pi", "aarch64"]
categories = ["embedded", "no-std"]

[features]
default = []

[dependencies]

[dev-dependencies]
# No external dev dependencies for no_std embedded target

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"

# Embedded binary target
[[bin]]
name = "tiny_os"
path = "src/main.rs"

# Library target for modular access
[lib]
name = "tiny_os_lib"
path = "src/lib.rs"

# Workspace metadata to prevent rust-analyzer test issues
[workspace.metadata.rust-analyzer]
cargo-target = "aarch64-unknown-none"
cargo-all-targets = false
