[package]
name = "tiny_os"
version = "0.2.0"
edition = "2021"
authors = ["TinyOS Contributors"]
description = "A bare-metal operating system for Raspberry Pi 3/4/5"
keywords = ["embedded", "bare-metal", "os", "raspberry-pi", "aarch64"]
categories = ["embedded", "no-std"]

[features]
default = []
raspi3 = []
std = []

[dependencies]

[dev-dependencies]
# No external dev dependencies for no_std embedded target

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"

# Embedded binary target
[[bin]]
name = "tiny_os"
path = "src/main.rs"

# Library target for modular access
[lib]
test = false # Disable tests in the library due to no_std
name = "tiny_os_lib"
path = "src/lib.rs"

# Disable any test targets completely to prevent rust-analyzer issues
[[test]]
name = "test_disabled"
path = "tests/test_disabled.rs"
test = false

# Workspace metadata to prevent rust-analyzer test issues
[workspace.metadata.rust-analyzer]
cargo-target = "aarch64-unknown-none"
cargo-all-targets = false
cargo-all-features = false
check-on-save = true
